--- a/sass/yaml-sass/forms/_gray-theme.scss
+++ b/sass/yaml-sass/forms/_gray-theme.scss
@@ -33,7 +33,7 @@
 		}
 
 		.ym-fbox {
-			padding: 1em;
+			padding: 0 1em;
 			margin-bottom: 0.5em;
 		}
 
@@ -49,7 +49,7 @@
 			font-size: 1em;
 			font-size: 100%;
 			color: #000;
-			margin: 1em;
+			margin: 0 1em 1em 1em;
 		}
 
 		.ym-fbox-check:focus + label {
